[package]
name = "bunkernz_client"
version = "0.0.1"
authors = ["opendevleague"]
edition = "2018"

[[bin]]
name = "bunkernz_client"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine", version = "^0" }
oxid = { git = "https://github.com/rellfy/oxid", branch = "master" }
#oxid = { path = "../../oxid/oxid" }
glam = { version = "0.8", features = ["scalar-math"] }