[package]
name = "bunkernz_client"
version = "0.0.1"
authors = ["opendevleague"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"
engine = { path = "../engine", version = "^0" }
wasm-bindgen-futures = "0.4.10"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlContextAttributes',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
]
